
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int rankLast ;
struct TYPE_3__ {size_t nbBits; size_t count; } ;
typedef TYPE_1__ nodeElt ;
typedef size_t U32 ;
typedef size_t const BYTE ;


 size_t BIT_highbit32 (int) ;
 int HUF_TABLELOG_MAX ;
 int memset (size_t*,int,int) ;

__attribute__((used)) static U32 HUF_setMaxHeight(nodeElt *huffNode, U32 lastNonNull, U32 maxNbBits)
{
 const U32 largestBits = huffNode[lastNonNull].nbBits;
 if (largestBits <= maxNbBits)
  return largestBits;


 {
  int totalCost = 0;
  const U32 baseCost = 1 << (largestBits - maxNbBits);
  U32 n = lastNonNull;

  while (huffNode[n].nbBits > maxNbBits) {
   totalCost += baseCost - (1 << (largestBits - huffNode[n].nbBits));
   huffNode[n].nbBits = (BYTE)maxNbBits;
   n--;
  }
  while (huffNode[n].nbBits == maxNbBits)
   n--;


  totalCost >>= (largestBits - maxNbBits);


  {
   U32 const noSymbol = 0xF0F0F0F0;
   U32 rankLast[HUF_TABLELOG_MAX + 2];
   int pos;


   memset(rankLast, 0xF0, sizeof(rankLast));
   {
    U32 currNbBits = maxNbBits;
    for (pos = n; pos >= 0; pos--) {
     if (huffNode[pos].nbBits >= currNbBits)
      continue;
     currNbBits = huffNode[pos].nbBits;
     rankLast[maxNbBits - currNbBits] = pos;
    }
   }

   while (totalCost > 0) {
    U32 nBitsToDecrease = BIT_highbit32(totalCost) + 1;
    for (; nBitsToDecrease > 1; nBitsToDecrease--) {
     U32 highPos = rankLast[nBitsToDecrease];
     U32 lowPos = rankLast[nBitsToDecrease - 1];
     if (highPos == noSymbol)
      continue;
     if (lowPos == noSymbol)
      break;
     {
      U32 const highTotal = huffNode[highPos].count;
      U32 const lowTotal = 2 * huffNode[lowPos].count;
      if (highTotal <= lowTotal)
       break;
     }
    }


    while ((nBitsToDecrease <= HUF_TABLELOG_MAX) && (rankLast[nBitsToDecrease] == noSymbol))
     nBitsToDecrease++;
    totalCost -= 1 << (nBitsToDecrease - 1);
    if (rankLast[nBitsToDecrease - 1] == noSymbol)
     rankLast[nBitsToDecrease - 1] = rankLast[nBitsToDecrease];
    huffNode[rankLast[nBitsToDecrease]].nbBits++;
    if (rankLast[nBitsToDecrease] == 0)
     rankLast[nBitsToDecrease] = noSymbol;
    else {
     rankLast[nBitsToDecrease]--;
     if (huffNode[rankLast[nBitsToDecrease]].nbBits != maxNbBits - nBitsToDecrease)
      rankLast[nBitsToDecrease] = noSymbol;
    }
   }

   while (totalCost < 0) {
    if (rankLast[1] == noSymbol) {

     while (huffNode[n].nbBits == maxNbBits)
      n--;
     huffNode[n + 1].nbBits--;
     rankLast[1] = n + 1;
     totalCost++;
     continue;
    }
    huffNode[rankLast[1] + 1].nbBits--;
    rankLast[1]++;
    totalCost++;
   }
  }
 }

 return maxNbBits;
}
